# workshop-ai-agents

./: .env.example  .gitignore  01-Pydantic AI basics.ipynb  02-Pydantic AI agents in action.ipynb  03-Pydantic AI orchestration.ipynb  04-Pydantic AI North Dakota spills.ipynb  20250715 BZA min.txt  How_I_Listed_Files.pptx  README.md  autonomous_multi_agent_teaching_example.py  example.txt  pyproject.toml  workshop-config.yaml  workshop-site.json
.devcontainer/: devcontainer.json  setup.sh
data/spotsylvania-grantor-transfers-2022-2026/: 2022-01-to-12-transfers-with-grantor.xlsx  2023-01-to-12-transfers-with-grantor.xlsx  2024-01-to-12-transfers-with-grantor.xlsx  2025-01-to-12-transfers-with-grantor.xlsx  2026-01-to-03-transfers-with-grantor.xlsx
docs/: index.html
docs/01-pydantic-ai-basics/: 01-pydantic-ai-basics-ANSWERS.html  01-pydantic-ai-basics-ANSWERS.ipynb  01-pydantic-ai-basics.ipynb
docs/02-pydantic-ai-agents-in-action/: 02-pydantic-ai-agents-in-action-ANSWERS.html  02-pydantic-ai-agents-in-action-ANSWERS.ipynb  02-pydantic-ai-agents-in-action.ipynb
docs/03-pydantic-ai-and-property-ownership-orchestration/: 03-pydantic-ai-orchestration-ANSWERS.html  03-pydantic-ai-orchestration-ANSWERS.ipynb
docs/03-pydantic-ai-orchestration/: 03-pydantic-ai-orchestration-ANSWERS.html  03-pydantic-ai-orchestration-ANSWERS.ipynb  03-pydantic-ai-orchestration.ipynb
docs/04-pydantic-ai-and-oil-spills-more-orchestration/: 04-pydantic-ai-north-dakota-spills.ipynb  (+1 more)
research/: README.md  hazconnect_cdp_collect.py  hazconnect_tampermonkey.user.js  public_records_probe.py
(+1 files in other folders)
