[project]
name = "pydantic-ai-workshop"
version = "0.1.0"
description = "Workshop notebooks for building agentic workflows with Pydantic AI."
requires-python = ">=3.11,<3.13"
dependencies = [
    "braintrust",
    "ipykernel",
    "ipywidgets",
    "markdownify",
    "pandas",
    "perplexityai",
    "pillow",
    "pydantic-ai-slim[duckduckgo,mcp,openai,openrouter,tavily,web-fetch]",
    "pymupdf",
    "python-dotenv",
    "requests",
    "tqdm",
]

[tool.uv]
package = false
